--- a/src/components/petshop/style.css
+++ b/src/components/petshop/style.css
@@ -3,7 +3,8 @@
     padding:7px;
     margin-right: 20px;
     border-radius: 5px;
-    border-bottom: 3px;
+    border-bottom: 3px solid transparent;
+    transition: 0.5;
 }
 .petshop img{
     max-height: 80px;
@@ -21,4 +22,11 @@
 .container-infos{
     margin-bottom: 10px;
     margin-left: 3px;
+}
+.petshop.active,
+.petshop:hover{
+    cursor: pointer;
+    border-bottom: 3px solid var(--primary);
+    transition: 0.5s;
+    background-color: #f6f5f5;
 }
